fix: reservation + AML review fixes (3 critical + 5 high)
Critical fixes:
- PESSIMISTIC_WRITE lock on Reservation (findByIdForUpdate) — prevents double fulfillment/cancellation
- PESSIMISTIC_WRITE lock on CashBalance (findByBranchIdAndCurrencyIdForUpdate) — prevents stock corruption
- Supervisor branch validation — cannot approve cancellation from another branch

High fixes:
- Customer.isForeign/isPep null-safe (Boolean.TRUE.equals)
- TranzTipus -1 implemented: foreign customer + USD = BLOCKED
- MonthlyClosingService safeAdd helper for null BigDecimal
- .trim().isEmpty() → .isBlank() consistency (4 places)
- Validation order: cheap checks before DB queries

6 files changed, 0 compile errors (backend + frontend)